removed deprecated URL-methods